tests/baselines/reference/functionOverloadsOutOfOrder.errors.txt
==== tests/cases/compiler/functionOverloadsOutOfOrder.ts (2 errors) ====
    class d {
        private foo(n: number): string;
        private foo(ns: any) {
            return ns.toString();
        }
        private foo(s: string): string;
        ~~~~~~~
!!! functionOverloadsOutOfOrder.ts(6,5): error TS1041: Function implementation expected.
    }
    
    class e {
        private foo(ns: any) {
            return ns.toString();
        }
        private foo(s: string): string;
        private foo(n: number): string;
        ~~~~~~~
!!! functionOverloadsOutOfOrder.ts(14,5): error TS1041: Function implementation expected.
    }